--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/vite": "^4.1.12",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "astro": "^5.12.8"
+    "astro": "^5.12.8",
+    "stripe": "^19.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
